--- a/style.css
+++ b/style.css
@@ -1,168 +1,428 @@
-*{
-    padding: 0;
-    margin: 0 ;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+/* font-family: 'Roboto', sans-serif; */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
 body {
-    box-sizing: border-box;
-    font-family: "Lato", monospace;
+  font-family: "Roboto", sans-serif;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  overflow-x: hidden;
+}
+
+.header {
+  height: 100vh;
+  background-image: url("./backgrounds/h_img.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.header h2 {
+  font-size: 45px;
+  font-weight: 500;
+}
+.header p {
+  font-size: 18px;
+}
+
+.header .mouse-click img {
+  height: 45px;
+  position: absolute;
+  bottom: 0;
+}
+
+.about {
+  padding: 0px 120px;
+}
+.about h2 {
+  font-weight: 500;
+}
+.about p {
+  font-size: 21px;
+}
+
+.services {
+  height: 60vh;
+  background-image: url("./backgrounds/s_image.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.services h2 {
+  margin-top: 20px;
+  font-weight: 500;
+}
+.services p {
+  font-size: 21px;
+}
+
+.work {
+  margin-top: 28px;
+}
+.work h2 {
+  margin-top: 20px;
+  font-weight: 500;
+}
+.work img {
+  height: 100px;
+}
+.card {
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-show h4 {
+  font-size: 23px;
+  margin-top: 20px;
+  font-weight: 500;
+}
+.card-hidden1,
+.card-hidden2,
+.card-hidden3 {
+  font-size: 21px;
+  display: none;
+}
+.title {
+  font-size: 23px;
+  font-weight: 500;
+}
+
+.portfolio .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.portfolio .row .col-md-12 {
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#overlay1,
+#overlay2,
+#overlay3,
+#overlay4,
+#overlay5,
+#overlay6,
+#overlay7,
+#overlay8 {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#work-overlay1,
+#work-overlay2,
+#work-overlay3,
+#work-overlay4,
+#work-overlay5,
+#work-overlay6,
+#work-overlay7,
+#work-overlay8 {
+  position: absolute;
+  left: 29px;
+  border: 3px solid white;
+  width: 80%;
+  color: #000;
+  display: none;
+  opacity: 4;
+}
+
+.overlay-text {
+  font-size: 25px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+.overlay-effect {
+  opacity: 0.3;
+}
+
+.portfolio h2 {
+  margin-top: 20px;
+  font-weight: 500;
+}
+.portfolio img {
+  height: 210px;
+  margin: 14px;
+}
+
+.contactForm {
+  height: 80vh;
+  background-image: url("./backgrounds/c_image.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.contactForm .row {
+  display: flex;
+  justify-content: center;
+  margin: 0px 150px;
+}
+.col-md-6 {
+  width: 40%;
+  margin-bottom: 20px;
+}
+input[type="text"],
+input[type="text"]:focus,
+input[type="email"],
+input[type="email"]:focus,
+textarea[type="text"],
+textarea[type="text"]:focus {
+  background: transparent;
+  color: #fff;
+  font-size: 20px;
+  outline: none;
+}
+.contactForm textarea {
+  width: 70%;
+  height: 250px;
+  margin: 0px auto;
+}
+
+.contactForm button {
+  width: 100px;
+  justify-self: flex-start;
+}
+.form-control::-webkit-input-placeholder {
+  color: white;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 20vh;
+  margin: 25px 20px;
+}
+.footer .icons {
+  margin-bottom: 20px;
+}
+.footer .icons img {
+  margin: 10px;
+}
+.footer h2 {
+  font-weight: 400;
+  font-size: 25px;
+}
+
+@media screen and (max-width: 1024px) {
+  .header h2 {
+    font-size: 45px;
+    font-weight: 500;
   }
-  .mouse{
-      margin-top:10vh;
+  .header p {
+    font-size: 30px;
   }
-.home{
-    background-image: url("backgrounds/h_img.jpg");
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.my_container{
-    margin-top: 30vh;
-    position: absolute;
-    left: 25vh;
-    color: white;
+
+  .contactForm textarea {
+    width: 100%;
+    height: 250px;
+    justify-self: flex-start;
+    margin-bottom: 10px;
+  }
 }
 
-.services{
-    background-image: url("backgrounds/s_image.jpg");
-    background-color: rgba(0,0,0,0.8);
-    height: 50vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-}
+@media screen and (max-width: 768px) {
+  .header h2 {
+    font-size: 45px;
+    font-weight: 500;
+  }
+  .header p {
+    font-size: 30px;
+  }
+  .header .mouse-click img {
+    height: 30px;
+  }
 
-.mycont {
-    position: absolute;
-    color: white;
-    left: 25vh;
-    top: 10vh;
-    
-}
-.portfolio{
-    margin-top: 20vh;
-}
-.portfolio img{
-    width: 250px;
-    padding-top:10px ;
-}
+  .about {
+    padding: 0px 10px;
+  }
 
-.contact-section{
-    margin-top: 10vh;
-    background-image: url("backgrounds/c_image.jpg");
-    height: 100vh;
-    position: relative;
-}
-.lecont {
-    position: absolute;
-    left: 25vh;
-    top: 10vh;
-}
-.texts{
-    background: rgba(0, 0,0,0.3);   
-}
-.foot{
-    margin-top: 10vh;
-}
-.text input{
-    height: 150px;
-    background: rgba(0, 0,0,0.3);
-}
-.pic{
-    margin-top: 10vh;
-}
-.icons-section{
-    margin-top: 10vh;
-}
-.iconrow{
-    margin-left: 10vh;
-}
-.designtxt{
- display: none ;
-}
-.devtxt{
-    display: none ; 
-}
-.prodtxt{
+  .about p {
+    font-size: 23px;
+  }
+
+  .services p {
+    font-size: 23px;
+  }
+
+  .card-hidden1,
+  .card-hidden2,
+  .card-hidden3 {
+    font-size: 20px;
     display: none;
+  }
+  .work {
+    margin-top: 20px;
+  }
+  .work h2 {
+    margin-top: 18px;
+    font-weight: 500;
+  }
+  .work img {
+    height: 100px;
+  }
+  .contactForm {
+    height: 80vh;
+  }
+
+  .portfolio img {
+    height: 220px;
+    margin: 14px;
+  }
+
+  .contactForm .row {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0px 0px;
+  }
+  .col-md-6 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .contactForm textarea {
+    width: 100%;
+    height: 250px;
+    justify-self: flex-start;
+    margin-bottom: 10px;
+  }
+
+  .contactForm button {
+    width: 100px;
+    margin-left: 18px;
+    margin-bottom: 15px;
+  }
+
+  .footer {
+    margin-top: 60px;
+    height: 20vh;
+  }
+
+  .footer .icons {
+    margin-bottom: 0px;
+  }
+  .footer .icons img {
+    margin: 10px;
+  }
+  .footer h2 {
+    font-weight: 400;
+    font-size: 25px;
+  }
 }
 
-#pro1 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
+/* tablet and mobile sized devices */
+@media screen and (max-width: 425px) {
+  .header h2 {
+    font-size: 33px;
+
   }
-  
-  #pro1:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  .header p {
+    font-size: 15px;
+  }
+  .header .mouse-click img {
+    height: 30px;
   }
 
-  #pro2 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
-  }
-  
-  #pro2:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  .about {
+    padding: 0px 10px;
   }
 
-  #pro3 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
-  }
-  
-  #pro3:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  .about p {
+    font-size: 16px;
   }
 
-
-  #pro4 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
-  }
-  
-  #pro4:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  .services p {
+    font-size: 16px;
   }
 
-  #pro5 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
+  .card-hidden1,
+  .card-hidden2,
+  .card-hidden3 {
+    font-size: 16px;
+    display: none;
   }
+  .work {
+    margin-top: 20px;
+  }
+  .work h2 {
+    margin-top: 18px;
   
-  #pro5:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  }
+  .work img {
+    height: 70px;
+  }
+  .contactForm {
+    height: 80vh;
   }
 
-  #pro6 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
-  }
-  
-  #pro6:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  .portfolio img {
+    height: 200px;
+    margin: 14px;
   }
 
-  #pro7 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
+  .contactForm .row {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0px 0px;
   }
-  
-  #pro7:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+  .col-md-6 {
+    width: 100%;
+    margin-bottom: 10px;
   }
 
-  #pro8 {
-    opacity: 1;
-    filter: alpha(opacity=50); 
+  .contactForm textarea {
+    width: 100%;
+    height: 90px;
+    justify-self: flex-start;
+    margin-bottom: 10px;
   }
-  
-  #pro8:hover {
-    opacity: 0.5;
-    filter: alpha(opacity=100); 
+
+  .contactForm button {
+    width: 100px;
+    margin-left: 18px;
+    margin-bottom: 15px;
   }
+
+  .footer {
+    margin-top: 150px;
+    height: 20vh;
+  }
+
+  .footer .icons {
+    margin-bottom: 0px;
+  }
+  .footer .icons img {
+    margin: 10px;
+  }
+  .footer h2 {
+
+    font-size: 20px;
+  }
+}
